--- a/django_project/EncryptNotes/templates/EncryptNotes/login.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/login.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-        <title>Login EncryptNotes</title>
-</head>
-<body>
-    <h1></h1>
-</body>
-</html>
+{% extends "EncryptNotes/base.html" %}
+{% block content %}    
+  
+
+{% endblock content %}
