--- a/django_project/EncryptNotes/templates/EncryptNotes/home.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/home.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-        <title>EncryptNotes</title>
-</head>
-<body>
+
+{% extends "EncryptNotes/base.html" %}
+{% block content %}    
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
         <p>By {{post.author}} on {{post.date_posted}}</p>
         <p>{{ post.content }}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
