update for files

--- a/django_project/EncryptNotes/templates/EncryptNotes/about.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/about.html
@@ -1,6 +1,6 @@
 {% extends "EncryptNotes/base.html" %}
 {% block content %}    
-    <h1>EncryptNotes is a secure and user-friendly note-taking application that 
+    <p>EncryptNotes is a secure and user-friendly note-taking application that 
         prioritizes privacy through end-to-end encryption. Users can store personal 
         notes, reminders, and sensitive information with peace of mind, knowing that
         only they can access their data. The application will feature an intuitive 
@@ -14,5 +14,5 @@
         [Jacob	Nagel] 
         [Duncan	Waddle]	
         [Kurejake Brown]
-        [Grant	Burkemper]</h1>>
+        [Grant	Burkemper]</p>
 {% endblock content %}
