Fix some bugs, still broken

--- a/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
@@ -2,13 +2,11 @@
 {% block content %} 
     <h1>Annoucements</h1>
     <hr>
-    <p>Currently not much has been updated or changed. 
-        Only the addition of a 'Create Page' 
-        and a Few Test Notes have been added. That is what we are currently at. 
+    <p>( ͡° ͜ʖ ͡°)
     <br>
     <br>
 
-        Date Posted: 3/11/2025 1:23 am
+        Date Posted: 
     <hr>
 
     
