--- a/django_project/EncryptNotes/templates/EncryptNotes/create.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/create.html
@@ -1,16 +1,17 @@
 {% extends "EncryptNotes/base.html" %}
 {% block content %}
-    <style>
-        #create {
-            width: 740px;
-            height: 500px;
-        }
-    </style>
-    <h1>Place Holder</h1>
+    <h1>Create a New Note</h1>
     <hr>
-    <form action="/create/" method="post">
-        <input class="ml" type="submit" value="SAVE">
-        <br>
-        <input id="create" type="text">
+    <form method="post">
+        <div class="form-group">
+            <label for="id_title">Title:</label>
+            {{ form.title }}
+        </div>
+        <div class="form-group">
+            <label for="id_content">Content:</label>
+            {{ form.content }}
+        </div>
+        <button type="submit" class="btn btn-primary">Save Note</button>
     </form>
+
 {% endblock content %}
