--- a/django_project/EncryptNotes/templates/EncryptNotes/base.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/base.html
@@ -28,9 +28,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
+			{% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'EncryptNotes-home' %}">Home</a>
               <a class="nav-item nav-link" href="{% url 'EncryptNotes-about' %}">About</a>
-              <a class="nav-item nav-link" href="{% url 'EncryptNotes-create' %}">Create</a>
+			  <a class="nav-item nav-link" href="{% url 'EncryptNotes-create' %}">Create</a>
+			  <a class="nav-item nav-link" href="{% url 'EncryptNotes-list' %}">List</a>
+			  {% else %}
+              <a class="nav-item nav-link" href="{% url 'EncryptNotes-home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'EncryptNotes-about' %}">About</a>
+			  {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -61,7 +67,7 @@
         <div class="col-md-4">
           <div class="content-section">
             <h3>EncryptNotes Sidebar</h3>
-            <p class='text-muted'>Currently there is nothing here but annoucements. It's for updates to our web-app if wish to continue work on it further.
+            <p class='text-muted'>Work in progress
               <ul class="list-group">
                 <a class="list-group-item list-group-item-light" href="{% url 'EncryptNotes-announcements' %}">Announcements</a>
               </ul>
