--- a/django_project/EncryptNotes/templates/EncryptNotes/about.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/about.html
@@ -1,23 +1,14 @@
 {% extends "EncryptNotes/base.html" %}
 {% block content %} 
-    <h1>About Us</h1>
+    <h1>About</h1>
     <hr> 
     <p>EncryptNotes is a secure and user-friendly note-taking application that 
-        prioritizes privacy through end-to-end encryption. Users can store personal 
-        notes, reminders, and sensitive information with peace of mind, knowing that
-        only they can access their data. The application will feature an intuitive 
-        interface, support for text formatting, categorization of notes, and the 
-        ability to sync across multiple devices. Encryption ensures that notes are 
+        prioritizes privacy with encryption. Encryption ensures that notes are 
         securely stored and decrypted only by the user, making this app ideal for 
         individuals looking for a secure, private, and seamless note-taking experience.
         
         <br>
         <br>
         <hr>
-        Created by:
-        [Kaden  Roof] 
-        [Jacob  Nagel] 
-        [Duncan Waddle] 
-        [Kurejake Brown]
-        [Grant  Burkemper]</p>
+        </p>
 {% endblock content %}
