--- a/django_project/EncryptNotes/templates/EncryptNotes/list.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/list.html
@@ -1,1 +1,17 @@
 {% extends "EncryptNotes/base.html" %}
+{% block content %}
+    <h1>Note List</h1>
+    <hr>
+    <ul class="note-list">
+        {% for note in notes %}
+            <li class="note-item">
+                <strong>{{ note.title }}</strong><br>
+                <p>{{ note.content|truncatechars:100 }}</p>
+                <a href="{% url 'view_note' note.id %}">View</a>
+                <a href="{% url 'edit_note' note.id %}">Edit</a>
+            </li>
+        {% empty %}
+            <p>No notes found.</p>
+        {% endfor %}
+    </ul>
+{% endblock content %}
