fix multiple bugs and tinymce

--- a/django_project/EncryptNotes/templates/EncryptNotes/base.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/base.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>EncryptNotes Sidebar</h3>
+            <h3>EncryptNotes</h3>
             <p class='text-muted'>Work in progress
               <ul class="list-group">
                 <a class="list-group-item list-group-item-light" href="{% url 'EncryptNotes-announcements' %}">Announcements</a>
