--- a/django_project/EncryptNotes/templates/EncryptNotes/list.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/list.html
@@ -7,8 +7,8 @@
             <li class="note-item">
                 <strong>{{ note.title }}</strong><br>
                 <p>{{ note.content|truncatechars:100 }}</p>
-                <a href="{% url 'view_note' note.id %}">View</a>
-                <a href="{% url 'edit_note' note.id %}">Edit</a>
+                <a href="{% url 'EncryptNotes-view' note.id %}">View</a>
+                <a href="{% url 'EncryptNotes-edit' note.id %}">Edit</a>
             </li>
         {% empty %}
             <p>No notes found.</p>
