--- a/django_project/EncryptNotes/templates/EncryptNotes/base.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/base.html
@@ -12,6 +12,9 @@
 	
     <link rel="stylesheet" type="text/css" href="{% static 'EncryptNotes/main.css' %}">
 
+    <!-- Notebook Page CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'EncryptNotes/styles.css' %}">
+
     {% if title %}
         <title>EncryptNotes - {{ title }}</title>
     {% else %}
@@ -22,60 +25,62 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="{% url 'EncryptNotes-home' %}">EncryptNotes</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-			{% if user.is_authenticated %}
-              <a class="nav-item nav-link" href="{% url 'EncryptNotes-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'EncryptNotes-about' %}">About</a>
-			  <a class="nav-item nav-link" href="{% url 'EncryptNotes-create' %}">Create</a>
-			  <a class="nav-item nav-link" href="{% url 'EncryptNotes-list' %}">List</a>
-			  {% else %}
-              <a class="nav-item nav-link" href="{% url 'EncryptNotes-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'EncryptNotes-about' %}">About</a>
-			  {% endif %}
+            <!-- EncryptNotes Button -->
+            <a class="btn btn-primary mr-2" href="{% url 'EncryptNotes-home' %}">EncryptNotes</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggle">
+                <div class="navbar-nav mr-auto">
+                    <!-- About Button -->
+                    <a class="btn btn-info" href="{% url 'EncryptNotes-about' %}">About</a>
+                </div>
+                <!-- Navbar Right Side -->
+                <div class="navbar-nav">
+                    {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                        <form action="{% url 'logout' %}" method="post" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-outline-light">Logout</button>
+                        </form>
+                    {% else %}
+                        <a class="btn btn-outline-light mr-2" href="{% url 'login' %}">Login</a>
+                        <a class="btn btn-outline-light" href="{% url 'register' %}">Register</a>
+                    {% endif %}
+                </div>
             </div>
-            <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-              {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                <form action="{% url 'logout' %}" method="post">{% csrf_token %}<button type="submit" class='btn btn-outline-light'>Logout</button></form>
-              {% else %}
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-              {% endif %}
-            </div>
-          </div>
         </div>
-      </nav>
+    </nav>
     </header>
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
-          {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-              </div>
-            {% endfor %}
-          {% endif %}
-          {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>EncryptNotes</h3>
-            <p class='text-muted'>Work in progress
-              <ul class="list-group">
-                <a class="list-group-item list-group-item-light" href="{% url 'EncryptNotes-announcements' %}">Announcements</a>
-              </ul>
-            </p>
+          <div class="col-md-8">
+              {% if user.is_authenticated %}
+                  <div class="mb-4">
+                      <a class="btn btn-success btn-lg" href="{% url 'EncryptNotes-create' %}">Create Note</a>
+                  </div>
+              {% endif %}
+              {% if messages %}
+                  {% for message in messages %}
+                      <div class="alert alert-{{ message.tags }}">
+                          {{ message }}
+                      </div>
+                  {% endfor %}
+              {% endif %}
+              {% block content %}{% endblock %}
           </div>
-        </div>
+          <div class="col-md-4">
+              <div class="content-section">
+                  <h3>EncryptNotes</h3>
+                  <p class='text-muted'>Work in progress
+                      <ul class="list-group">
+                          <a class="list-group-item list-group-item-light" href="{% url 'EncryptNotes-announcements' %}">Announcements</a>
+                      </ul>
+                  </p>
+              </div>
+          </div>
       </div>
-    </main>
+  </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
