--- a/django_project/EncryptNotes/templates/EncryptNotes/list.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/list.html
@@ -1,14 +1,15 @@
 {% extends "EncryptNotes/base.html" %}
+
 {% block content %}
     <h1>Note List</h1>
     <hr>
     <ul class="note-list">
         {% for note in notes %}
-            <li class="note-item">
-                <strong>{{ note.title }}</strong><br>
-                <p>{{ note.content|truncatechars:100 }}</p>
-                <a href="{% url 'EncryptNotes-view' note.id %}">View</a>
-                <a href="{% url 'EncryptNotes-edit' note.id %}">Edit</a>
+            <li class="note-item notebook-page">
+                <!-- Make the title a clickable link -->
+                <a href="{% url 'EncryptNotes-view' note.id %}" class="note-title">
+                    <strong>{{ note.title }}</strong>
+                </a>
             </li>
         {% empty %}
             <p>No notes found.</p>
