--- a/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
@@ -1,8 +1,8 @@
 {% extends "EncryptNotes/base.html" %}
 {% block content %} 
-    <h1>Annoucements</h1>
+    <h1>Announcements</h1>
     <hr>
-    <p>( ͡° ͜ʖ ͡°)
+    <p>Phase 4
     <br>
         Date Posted: 3/11/2025 1:23 am
     <hr>
