--- a/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
@@ -2,7 +2,7 @@
 {% block content %} 
     <h1>Announcements</h1>
     <hr>
-    <p>Phase 4
+    <p>EncryptNotes Work-In-Progress
     <br>
         Date Posted: 3/11/2025 1:23 am
     <hr>
