--- a/django_project/EncryptNotes/templates/EncryptNotes/edit.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/edit.html
@@ -13,6 +13,16 @@
             {{ form.content.label_tag }}
             {{ form.content }}
         </div>
+		<div class="form-group">
+        <!-- Categorization Checkbox -->
+			<label for="id_categorized">Enable Categorization:</label>
+			{{ form.categorized }}
+		</div>
+		<div class="form-group">
+        <!-- Manual Category Entry -->
+			<label for="id_category">Category (optional):</label>
+			{{ form.category }}
+		</div>
         <button type="submit" class="btn btn-success">Save</button>
         <a href="{% url 'EncryptNotes-home' %}" class="btn btn-secondary">Cancel</a>
         <a href="{% url 'EncryptNotes-delete' note.id %}" class="btn btn-danger">Delete</a>
