fix tinyMCE edit bug

--- a/django_project/EncryptNotes/templates/EncryptNotes/edit.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/edit.html
@@ -10,7 +10,7 @@
             {{ form.title }}
         </div>
         <div class="form-group">
-            <textarea id="note-content">{{ form.content.value }}</textarea>
+            {{ form.content }}
         </div>
 		<div class="form-group">
 			<label for="id_categorized">Enable Categorization:</label>
@@ -28,11 +28,14 @@
 	 <script src="https://cdn.tiny.cloud/1/77imh3r0wkiucf1epdh85cswmo23a6lehp5mbfyarmtwrf8g/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
-            selector: '#note-content',
+            selector: 'textarea[name="content"]',
             plugins: 'lists link image table',
             toolbar: 'undo redo | bold italic | alignleft aligncenter alignright | bullist numlist outdent indent',
             menubar: false
         });
+		document.querySelector('form').addEventListener('submit', function() {
+        tinymce.triggerSave(); 
+		});
     </script>
 
 {% endblock content %}
