Documents Updated and Phase Folders Re-Organized
Just cleaned up the phase folders to make them look a lot more presentable and worked on finishing up the documents. A bit is left to do but a majority is done. Then I added to the presentation slides completing 4 slides, the rest are still blank.

--- a/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/announcements.html
@@ -2,12 +2,27 @@
 {% block content %} 
     <h1>Announcements</h1>
     <hr>
-    <p>Phase 4
+    <h3>Past Commits</h3>
+    <P>This is about the past changes, fixes, and additions that we did but, I don't think should be put on here. Specifically the ones that were done before the next posts. I think it would clutter this page and make it way longer than it needs to be. So, this is here. -Duncan Waddle</P>
+    <p>Here is the web address. <strong>https://github.com/Dwaddle26/EncryptNotes</strong></p>
+    <p>This is for the whole project and has a log of commits/changes done in the course of the whole class. </p>
     <br>
-        Date Posted: 3/11/2025 1:23 am
+    Date Posted: May 3, 2025, 9:12 am
     <hr>
 
-    
+    <h3>Phase 3 Showcase</h3>
+    <P>Today was the first time we had to show off or demo our application. Before we were structuring and developing it, that was the first and second Phase. Hopefully it goes well.</P>
+    <p>(It does. -Duncan Waddle)</p>
+    <br>
+    Date Posted: April 14, 2025, 2:30 pm
+    <hr>
 
-    </p>
+    <h3>Phase 4 </h3>
+    <P>This is going to be the last actual day we present our application to our instructor and the class. We did it before at Phase two and three. Here to hoping it goes as well as the past did.</P>
+    <br>
+    Date Posted: May 3, 2025, 9:00 am
+    <hr>
+    <br>
+    <br>
+    <br>
 {% endblock content %}
