--- a/django_project/EncryptNotes/templates/EncryptNotes/base.html
+++ b/django_project/EncryptNotes/templates/EncryptNotes/base.html
@@ -72,7 +72,7 @@
           <div class="col-md-4">
               <div class="content-section">
                   <h3>EncryptNotes</h3>
-                  <p class='text-muted'>Work in progress
+                  <p class='text-muted'>Last Updated 5/3/2025 9:23  
                       <ul class="list-group">
                           <a class="list-group-item list-group-item-light" href="{% url 'EncryptNotes-announcements' %}">Announcements</a>
                       </ul>
